--- a/APILab2/package.json
+++ b/APILab2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api_sebastiano2022017",
+  "name": "apiPepin",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,14 +8,14 @@
     "start": "node index.js"
   },
   "keywords": [],
-  "author": "Sebastian Istacuy",
+  "author": "Pepin Medina",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.1",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
-    "mongoose": "^8.1.1"
+    "mongoose": "^8.2.0"
   }
 }
